# music-theory

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/note/: key.rs  mod.rs  note.rs
src/notes/: key.rs  mod.rs  note.rs  octave.rs
